--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -81,7 +81,7 @@ p {
 }
 
 .nav-item {
-	background: transparent;
+	
 	border-left: 1px solid #ccc;
 	cursor: pointer;
 	font-size: 0.8rem;
@@ -120,7 +120,7 @@ p {
 
 .tm-top-bar.active .navbar-expand-lg .navbar-nav .nav-link { padding: 30px 35px; }
 .tm-top-bar-bg { height: 119px; }
-.tm-section { min-height: 515px; }
+.tm-section { min-height: 300px; }
 
 .tm-section-pad {
 	padding-top: 80px;
@@ -129,7 +129,7 @@ p {
 
 #tm-section-1 {	
 	background-image: url('../img/kit.jpg');	
-	height: 515px;
+	height: 300px;
 }
 
 #tm-section-1s {	
@@ -171,8 +171,8 @@ p {
 }
 
 .form-control {
-	border-radius: 0;
-	padding: 0.6rem 0.75rem;
+	width:100%;
+	
 }
 
 .form-control:focus {
@@ -240,7 +240,7 @@ select.tm-select::-ms-expand { display: none; }
 	padding: 0.75rem 0.75rem 0.75rem 45px;
 }
 
-.tm-search-form .tm-form-element { width: 33.3333%; }
+.tm-search-form .tm-form-element { width: 675px; }
 .tm-search-form .tm-form-element-2 { width: 25%; }
 .tm-search-form-row { width: 900px; }
 .tm-btn-search { width: 100%; }
@@ -573,7 +573,7 @@ video {
 }
 
 @media all and (max-width: 600px) {
-	.ie-container-width-fix-2 { width: 100%; }
+	.ie-container-width-fix-2 { width: 800px; }
 }
 
 @media all and (max-width: 560px)  and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -601,114 +601,3 @@ section
 	padding: 20px;
 }
  
-section .container 
-{
-	position: relative;	
-	width: 800px;
-	height: 500px;
-	background: #fff;
-	box-shadow: 0 15px 50px rgb(0 0 0 / 10%);
-	overflow: hidden;
-	top: 80px;
-}
- 
- 
-section .container .user
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-}
- 
-section .container .user .imgBx
-{
-	position: relative;
-	width: 50%;
-	height: 100%;
-	background: rgb(255, 255, 255);
-	transition: 0.5s ;
-}
- 
-section .container .user .imgBx img 
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
- 
-section .container .user .formBx
-{
-	position: relative;
-	width: 50%;
-	height: 100%;
-	background: #fff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 40px;
-	transform: 0.5s;
-}
- 
-section .container .user .formBx form h2 
-{
-	font-size: 18px;
-	font-weight: 600;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	text-align: center;
-	width: 100%;
-	margin-bottom: 10px;
-	color: #555;
-}
- 
-section .container .user .formBx form input
-{
-	position: relative;
-	width: 100%;
-	padding: 10px;
-	background: #f5f5f5;
-	color: #333;
-	border: none;
-	outline: none;
-	box-shadow: none;
-	margin: 8px 0;
-	font-size: 14px;
-	letter-spacing: 1px;
-	font-weight: 300;
-}
- 
-section .container .user .formBx form input[type="submit"]
-{
-	max-width: 100px;
-	background: #677eff;
-	color: #fff;
-	cursor: pointer;
-	font-size: 14px;
-	font-weight: 500;
-	letter-spacing: 1px;
-	transition: 0.5s;
-}
- 
-section .container .user .formBx form .signup
-{
-	position: relative;
-	margin-top: 20px;
-	font-size: 12px;
-	letter-spacing: 1px;
-	color: #555;
-	text-transform: uppercase;
-	font-weight: 300;
-}
- 
-section .container .user .formBx form .signup a 
-{
-	font-weight: 600;
-	text-decoration: none;
-	color: #677eff;
-}
