--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -608,9 +608,9 @@ section
 {
 	position: relative;
 	min-height: 100vh;
-	background: rgb(192, 182, 182);
+	background-image: url('../img/kit.jpg');;
 	justify-content: center;
-	align-items: center;
+	align-items: center; 
 	padding: 20px;
 }
  
