Request booking added

--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -608,7 +608,7 @@ section
 {
 	position: relative;
 	min-height: 100vh;
-	background-image: url('../img/kit.jpg');;
+	background-image: url('../img/grey.jpg');;
 	justify-content: center;
 	align-items: center; 
 	padding: 20px;
