--- a/public/tablelist/css/main.css
+++ b/public/tablelist/css/main.css
@@ -76,6 +76,7 @@ button {
 	outline: none !important;
 	border: none;
 	background: transparent;
+  position: center;
 }
 
 button:hover {
@@ -97,8 +98,8 @@ iframe {
 }
 
 .container-table100 {
-  width: 100%;
-  min-height: 100vh;
+  
+  min-height: 50vh;
   background: #d1d1d1;
 
   display: -webkit-box;
@@ -109,7 +110,7 @@ iframe {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 33px 30px;
+
 }
 
 .wrap-table100 {
@@ -168,22 +169,7 @@ th, td {
   background-color: #36304a;
 }
 
-.table100.ver1 .row100:hover {
-  background-color: #f2f2f2;
-}
 
-.table100.ver1 .hov-column-ver1 {
-  background-color: #f2f2f2;
-}
-
-.table100.ver1 .hov-column-head-ver1 {
-  background-color: #484848 !important;
-}
-
-.table100.ver1 .row100 td:hover {
-  background-color: #6c7ae0;
-  color: #fff;
-}
 
 /*==================================================================
 [ Ver2 ]*/
